# qecsim

./: .gitignore  README.md  pyproject.toml
examples/: run_examples.py
qecsim/: __init__.py  chip.py  cluster.py  codes.py  config.py  controllers.py  decoders.py  devices.py  engine.py  factories.py  layouts.py  links.py  message.py  metrics.py  orchestrators.py  planner.py  protocols.py  schedulers.py  schemes.py  wiring.py
qecsim/adapters/: pymatching_decoder.py  stim_device.py  window_error_models.py  window_problems.py
qecsim/frontends/: circuit.py
tests/: conftest.py  test_backlog_recursion.py  test_boundary_data.py  test_config.py  test_controllers.py  test_engine.py  test_execution_order.py  test_factories.py  test_full_stack_decoding.py  test_idle_rounds.py  test_imports.py  test_instrumentation.py  test_links.py  test_messages.py  test_modularity.py  test_patch_mapping.py  test_payload_accounting.py  test_policies.py  test_sliding_keep_pace.py  test_unit_pools.py  test_window_error_models.py  test_window_problems.py  test_windowing.py
tests/data/: bb72_12_6_p003_r10.stim
